# WebScrapping_de_Noticias

.devcontainer/: devcontainer.json
raspagem-de-dados-noticias/: pyproject.toml
raspagem-de-dados-noticias/src/raspagem_de_dados_noticias/: ui_scrapping_noticias.py
